<resources>
    <string name="app_name">MichaelJacksonLibrary</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apptitle">Ready for Michael Jackson?</string>
    <string name="appstart">Start</string>
    <string name="about">About</string>
    <string name="background_description">This is our background</string>
    <string name="placeholder">Placeholder</string>
    <string name="clickimage">Click the image to view more details!</string>
    <string name="showTrackName">The track name is: </string>
    <string name="showCollection">The collection of this song is: </string>
    <string name="showDate">The release date of this song is: </string>
    <string name="click">Click to listen to the preview</string>

</resources>
