<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/showTrackNmae"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showTrackName"
            android:textSize="@dimen/info_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/trackName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:textColor="@color/infoColor"
            android:textSize="@dimen/info_size"/>

        <TextView
            android:id="@+id/showCollection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_default_margin"
            android:text="@string/showCollection"
            android:textSize="@dimen/info_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/collection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:textColor="@color/infoColor"
            android:textSize="@dimen/info_size"/>

        <TextView
            android:id="@+id/showDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_default_margin"
            android:text="@string/showDate"
            android:textSize="@dimen/info_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:textColor="@color/infoColor"
            android:textSize="@dimen/info_size"/>

        <TextView
            android:id="@+id/preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_default_margin"
            android:text="@string/click"
            android:textColor="@color/colorPrimaryRed"
            android:autoLink="web"
            android:clickable="true"
            android:textSize="@dimen/info_size"
            android:textStyle="italic"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>