<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/large_margin"
            android:text="@string/apptitle"
            android:textColor="@color/colorPrimaryRed"
            android:textSize="@dimen/title_size"
            android:textStyle="italic"
            />


        <Button
            android:id="@+id/startApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appstart"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/aboutApp"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:layout_gravity="center" />

    </FrameLayout>

</android.support.constraint.ConstraintLayout>